--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pokedex</title>
-</head>
-<body>
-    <h1>Pokedex</h1>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Pokedex</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <button id="show-modal">Show modal</button>
+    <div id="modal-container"></div>
     <ul class="pokemon-list"> </ul>
     <script src="/js/promise-polyfill.js"> </script>
     <script src="/js/fetch-polyfill.js"></script>
     <script src="/js/scripts.js"></script>
-</body>
+  </body>
 </html>
