--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button id="show-modal">Show modal</button>
-    <div id="modal-container"></div>
+    <!-- <button id="show-modal">pokemon</button> -->
+    <button id="modal-container"></button>
+    <!-- <div id="show-dialog">show dialog</div> -->
     <ul class="pokemon-list"> </ul>
     <script src="/js/promise-polyfill.js"> </script>
     <script src="/js/fetch-polyfill.js"></script>
