--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      h3, h4 {text-align: center;}
+      </style>
+   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Pokedex</title>
+    <title >Pokedex</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+ 
   </head>
   <body>
+    <body style="background-color:red;">
+    </body>
     <!-- <button id="show-modal">pokemon</button> -->
-    <button id="modal-container"></button>
-    <!-- <div id="show-dialog">show dialog</div> -->
+    <button id="modal-container"></button> 
+    <h3 >Pokedex</h3>
+    <h4>
+    <div id="show-dialog"></div>
     <ul class="pokemon-list"> </ul>
+  </h4>
     <script src="/js/promise-polyfill.js"> </script>
     <script src="/js/fetch-polyfill.js"></script>
     <script src="/js/scripts.js"></script>
