--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <style>
       h3, h4 {text-align: center;}
-      </style>
+      /* Add more style to pokedex */
+   </style>
    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
