--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title >Pokedex</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
  
   </head>
   <body>
-    <body style="background-color:red;">
-    </body>
     <!-- <button id="show-modal">pokemon</button> -->
-    <button id="modal-container"></button> 
+    <div id="modal-container"></div> 
     <h3 >Pokedex</h3>
     <h4>
     <div id="show-dialog"></div>
